// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StripePayoutPage matches snapshot with Stripe connected 1`] = `
<Page
  scrollingDisabled={false}
  title="StripePayoutPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="StripePayoutPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="StripePayoutPage"
      />
    </LayoutWrapperTopbar>
    <withViewport(LayoutWrapperAccountSettingsSideNavComponent)
      currentTab="StripePayoutPage"
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="StripePayoutPage.heading"
            values={Object {}}
          />
        </h1>
        <injectIntl(StripePayoutFormComponent)
          currentUserId={
            UUID {
              "_sdkType": "UUID",
              "uuid": "stripe-connected",
            }
          }
          disabled={false}
          failureUrl="http://localhost:3000/account/payments/verification-failed"
          inProgress={false}
          onChange={[Function]}
          onGetVerificationLink={[Function]}
          onSubmit={[Function]}
          ready={false}
          stripeAccountId={
            UUID {
              "_sdkType": "UUID",
              "uuid": undefined,
            }
          }
          stripeConnected={true}
          submitButtonText="PayoutPreferencesPage.submitButtonText"
          successUrl="http://localhost:3000/account/payments/verification-success"
          verificationFailed={null}
          verificationSuccess={null}
        />
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`StripePayoutPage matches snapshot with Stripe not connected 1`] = `
<Page
  scrollingDisabled={false}
  title="StripePayoutPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="StripePayoutPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="StripePayoutPage"
      />
    </LayoutWrapperTopbar>
    <withViewport(LayoutWrapperAccountSettingsSideNavComponent)
      currentTab="StripePayoutPage"
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="StripePayoutPage.heading"
            values={Object {}}
          />
        </h1>
        <injectIntl(StripePayoutFormComponent)
          currentUserId={
            UUID {
              "_sdkType": "UUID",
              "uuid": "stripe-not-connected",
            }
          }
          disabled={false}
          failureUrl="http://localhost:3000/account/payments/verification-failed"
          inProgress={false}
          onChange={[Function]}
          onGetVerificationLink={[Function]}
          onSubmit={[Function]}
          ready={false}
          stripeAccountId={null}
          stripeConnected={false}
          submitButtonText="PayoutPreferencesPage.submitButtonText"
          successUrl="http://localhost:3000/account/payments/verification-success"
          verificationFailed={null}
          verificationSuccess={null}
        />
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`StripePayoutPage matches snapshot with details submitted 1`] = `
<Page
  scrollingDisabled={false}
  title="StripePayoutPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="StripePayoutPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="StripePayoutPage"
      />
    </LayoutWrapperTopbar>
    <withViewport(LayoutWrapperAccountSettingsSideNavComponent)
      currentTab="StripePayoutPage"
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="StripePayoutPage.heading"
            values={Object {}}
          />
        </h1>
        <injectIntl(StripePayoutFormComponent)
          currentUserId={
            UUID {
              "_sdkType": "UUID",
              "uuid": "stripe-connected",
            }
          }
          disabled={false}
          failureUrl="http://localhost:3000/account/payments/verification-failed"
          inProgress={false}
          onChange={[Function]}
          onGetVerificationLink={[Function]}
          onSubmit={[Function]}
          ready={true}
          stripeAccountId={
            UUID {
              "_sdkType": "UUID",
              "uuid": undefined,
            }
          }
          stripeConnected={true}
          submitButtonText="PayoutPreferencesPage.submitButtonText"
          successUrl="http://localhost:3000/account/payments/verification-success"
          verificationFailed={null}
          verificationSuccess={null}
        />
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;
